@startuml
!pragma layout smetana

class Movie
class Actor
class Genre
class Director


Movie "*" -- "*" Actor

Movie "*" -- "*" Genre

Movie "*" -- "1" Director

class Movie {
Long id;
String title;
String originalLanguage;
String releaseDate;
double voteAverage;
List<Genre> genres;
List<Actor> actors;
Director directors;
}

class Actor{
Long id;
String name;
List<Movie> movies;
}

class Genre{
Long id;
String name;
List<Movie> movies;
}

class Director{
Long id;
String name;
List<Movie> movies;
}


@enduml